--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 /.idea
 /datadir
 .DS_Store
+
+# exclude modiifed files
+docker-compose.yaml
+blockscout/envs/common-blockscout.env
+blockscout/envs/common-frontend.env
+nginx/nginx.conf
