--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,6 +32,23 @@ services:
       WEB3_PROVIDER: "https://rpc.${DOMAIN_NAME}/"
       PRIVATE_KEY: "ac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80"
     restart: always
+  relayer:
+    image: fluentxyz/relayer:latest
+    environment:
+      L1_CONFIG_ENDPOINT: "https://eth-sepolia.g.alchemy.com/v2/DBpiq0grreNG4r0wdvAUCfdGJswhIPhk"
+      L1_CONFIG_WS: "wss://eth-sepolia.g.alchemy.com/v2/DBpiq0grreNG4r0wdvAUCfdGJswhIPhk"
+      L1_CONFIG_BRIDGE_ADDRESS: "0xf70f7cADD71591e96BD696716A4A2bA6286c82e8"
+      L1_CONFIG_SIGNER: "e2d5c4f37c863ef55779345bb3725b63bb4e17b51f9e6cad2c0e57e39d7c7ff7"
+      L2_CONFIG_ENDPOINT: "https://rpc.dev.thefluent.xyz/"
+      L2_CONFIG_WS: "ws://rpc.dev.thefluent.xyz:8546/"
+      L2_CONFIG_BRIDGE_ADDRESS: "0x6Ff08946Cef705D7bBC5deef4E56004e2365979f"
+      L2_CONFIG_SIGNER: "e2d5c4f37c863ef55779345bb3725b63bb4e17b51f9e6cad2c0e57e39d7c7ff7"
+      RELAYER_ENABLED: "true"
+      DA_ENABLED: "false"
+      CELESTIA_ENABLED: "false"
+      EIGEN_ENABLED: "false"
+      AVAIL_ENABLED: "false"
+    restart: always
   nginx:
     build: "./nginx"
     environment:
