--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -34,6 +34,26 @@ server {
     resolver 127.0.0.11;
     proxy_pass http://$host_upstream_mapped$request_uri;
   }
+
+  location /ws {
+    auth_basic off;
+
+    add_header Access-Control-Allow-Origin  "$http_origin";
+    add_header Access-Control-Allow-Headers "authorization, content-type";
+    add_header Access-Control-Allow-Methods "DELETE, GET, OPTIONS, POST, PUT, UPDATE";
+
+    proxy_hide_header Access-Control-Allow-Origin;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_http_version  1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+
+    resolver 127.0.0.11;
+    proxy_pass fluent:8546;
+  }
 }
 
 ; server {
