--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -52,7 +52,7 @@ server {
     proxy_set_header Connection "upgrade";
 
     resolver 127.0.0.11;
-    proxy_pass http://fluent:8546;
+    proxy_pass http://fluent:8546$request_uri;
   }
 }
 
