--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,8 +2,8 @@ map $host $host_upstream_mapped {
     hostnames;
 
     rpc.${DOMAIN_NAME} fluent:8545;
-    blockscout.${DOMAIN_NAME} blockscout.${DOMAIN_NAME}:8090;
-    explorer.${DOMAIN_NAME} blockscout-gateway:9000;
+    blockscout.${DOMAIN_NAME} 161.35.69.186:8090;
+    explorer.${DOMAIN_NAME} 161.35.69.186:9000;
     staking.${DOMAIN_NAME} staking-ui;
     genesis-config.${DOMAIN_NAME} genesis-config:8080;
     config.${DOMAIN_NAME} config-ui;
@@ -30,6 +30,8 @@ server {
     proxy_http_version  1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
+
+    client_max_body_size 100M;
 
     resolver 127.0.0.11;
     proxy_pass http://$host_upstream_mapped$request_uri;
