--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,6 +18,7 @@ services:
       - "--ws.api=eth,net,web3,debug,trace,txpool"
       - "--ws.port=8546"
       - "--ws.origins=*"
+      - "--engine.legacy"
     volumes:
       - "./datadir:/datadir"
     ports:
@@ -26,6 +27,24 @@ services:
     extra_hosts:
       - 'host.docker.internal:host-gateway'
     restart: always
+#  lighthouse:
+#    image: "sigp/lighthouse:v5.3.0"
+#    command:
+#      - "--testnet-dir=."
+#      - "bn"
+#      - "--datadir=/datadir"
+#      - "--eth1"
+#      - "--http1"
+#      - "--http-allow-sync-stalled"
+#      - "--execution-endpoints=http://fluent:8551"
+#      - "--enr-udp-port=9000"
+#      - "--enr-tcp-port=9000"
+#      - "--discovery-port=9000"
+#      - "--jwt-secrets=/root/.local/share/reth/dev/jwt.hex"
+#    volumes:
+#      - "./share:/root/.local/share/reth"
+#      - "./datadir/lighthouse:/datadir"
+#    restart: always
   faucet:
     image: chainflag/eth-faucet:1.1.0
     environment:
