--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -58,8 +58,8 @@ services:
       L1_CONFIG_WS: "wss://ethereum-holesky-rpc.publicnode.com"
       L1_CONFIG_BRIDGE_ADDRESS: "0x26bDc9d2aA7BB9beE05ED737E16482D5718B02c3"
       L1_CONFIG_SIGNER: "e2d5c4f37c863ef55779345bb3725b63bb4e17b51f9e6cad2c0e57e39d7c7ff7"
-      L2_CONFIG_ENDPOINT: "https://rpc.dev.thefluent.xyz/"
-      L2_CONFIG_WS: "wss://rpc.dev.thefluent.xyz/ws"
+      L2_CONFIG_ENDPOINT: "https://rpc.${DOMAIN_NAME}/"
+      L2_CONFIG_WS: "wss://rpc.${DOMAIN_NAME}/ws"
       L2_CONFIG_BRIDGE_ADDRESS: "0x6Ff08946Cef705D7bBC5deef4E56004e2365979f"
       L2_CONFIG_SIGNER: "e2d5c4f37c863ef55779345bb3725b63bb4e17b51f9e6cad2c0e57e39d7c7ff7"
       RELAYER_ENABLED: "true"
