--- a/blockscout/external-frontend.yml
+++ b/blockscout/external-frontend.yml
@@ -1,10 +1,10 @@
 version: '3.9'
 
 services:
-  redis_db:
+  redis-db:
     extends:
       file: ./services/redis.yml
-      service: redis_db
+      service: redis-db
 
   db-init:
     extends:
@@ -12,6 +12,9 @@ services:
       service: db-init
 
   db:
+    depends_on:
+      db-init:
+        condition: service_completed_successfully
     extends:
       file: ./services/db.yml
       service: db
@@ -19,7 +22,7 @@ services:
   backend:
     depends_on:
       - db
-      - redis_db
+      - redis-db
     extends:
       file: ./services/backend.yml
       service: backend
@@ -30,7 +33,7 @@ services:
         ETHEREUM_JSONRPC_WS_URL: ws://host.docker.internal:8545/
         INDEXER_DISABLE_INTERNAL_TRANSACTIONS_FETCHER: 'true'
         INDEXER_DISABLE_PENDING_TRANSACTIONS_FETCHER: 'true'
-        CHAIN_ID: '20993'
+        CHAIN_ID: '1337'
 
   visualizer:
     extends:
@@ -49,7 +52,8 @@ services:
 
   stats-db:
     depends_on:
-      - backend
+      stats-db-init:
+        condition: service_completed_successfully
     extends:
       file: ./services/stats.yml
       service: stats-db
@@ -57,9 +61,18 @@ services:
   stats:
     depends_on:
       - stats-db
+      - backend
     extends:
       file: ./services/stats.yml
       service: stats
+
+  user-ops-indexer:
+    depends_on:
+      - db
+      - backend
+    extends:
+      file: ./services/user-ops-indexer.yml
+      service: user-ops-indexer
 
   proxy:
     depends_on:
