--- a/blockscout/geth.yml
+++ b/blockscout/geth.yml
@@ -1,10 +1,10 @@
 version: '3.9'
 
 services:
-  redis_db:
+  redis-db:
     extends:
       file: ./services/redis.yml
-      service: redis_db
+      service: redis-db
 
   db-init:
     extends:
@@ -12,6 +12,9 @@ services:
       service: db-init
 
   db:
+    depends_on:
+      db-init:
+        condition: service_completed_successfully
     extends:
       file: ./services/db.yml
       service: db
@@ -19,7 +22,7 @@ services:
   backend:
     depends_on:
       - db
-      - redis_db
+      - redis-db
     extends:
       file: ./services/backend.yml
       service: backend
@@ -27,8 +30,6 @@ services:
       - db:database
     environment:
         ETHEREUM_JSONRPC_VARIANT: 'geth'
-        CHAIN_ID: '20993'
-        TRACE_FIRST_BLOCK: '1200'
 
   visualizer:
     extends:
@@ -54,7 +55,8 @@ services:
 
   stats-db:
     depends_on:
-      - backend
+      stats-db-init:
+        condition: service_completed_successfully
     extends:
       file: ./services/stats.yml
       service: stats-db
@@ -62,9 +64,18 @@ services:
   stats:
     depends_on:
       - stats-db
+      - backend
     extends:
       file: ./services/stats.yml
       service: stats
+
+  user-ops-indexer:
+    depends_on:
+      - db
+      - backend
+    extends:
+      file: ./services/user-ops-indexer.yml
+      service: user-ops-indexer
 
   proxy:
     depends_on:
