refactor: update blockscout and explorer service hosts

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,8 +2,8 @@ map $host $host_upstream_mapped {
     hostnames;
 
     rpc.${DOMAIN_NAME} fluent:8545;
-    blockscout.${DOMAIN_NAME} 161.35.69.186:8090;
-    explorer.${DOMAIN_NAME} 161.35.69.186:9000;
+    blockscout.${DOMAIN_NAME} frontend:8090;
+    explorer.${DOMAIN_NAME} frontend:9000;
     staking.${DOMAIN_NAME} staking-ui;
     genesis-config.${DOMAIN_NAME} genesis-config:8080;
     config.${DOMAIN_NAME} config-ui;
