--- a/blockscout/services/frontend.yml
+++ b/blockscout/services/frontend.yml
@@ -2,7 +2,8 @@ version: '3.9'
 
 services:
   frontend:
-    image: ghcr.io/blockscout/frontend:${FRONTEND_DOCKER_TAG:-latest}
+    image: ghcr.io/fluentlabs-xyz/blockscout-frontend:main
+#    image: ghcr.io/blockscout/frontend:${FRONTEND_DOCKER_TAG:-latest}
     pull_policy: always
     platform: linux/amd64
     restart: always
