refactor: update nginx config and RPC URLs, add new env var

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,11 +3,13 @@ map $host $host_upstream_mapped {
 
     rpc.${DOMAIN_NAME} fluent:8545;
     blockscout.${DOMAIN_NAME} blockscout-frontend:3000;
-    explorer.${DOMAIN_NAME} blockscout-frontend:3000;
-    staking.${DOMAIN_NAME} staking-ui;
-    genesis-config.${DOMAIN_NAME} genesis-config:8080;
-    config.${DOMAIN_NAME} config-ui;
     faucet.${DOMAIN_NAME} faucet:8080;
+}
+
+map $host $host_upstream_mapped_ws {
+    hostnames;
+
+    rpc.${DOMAIN_NAME} fluent:8546;
 }
 
 server {
@@ -54,6 +56,6 @@ server {
     proxy_set_header Connection "upgrade";
 
     resolver 127.0.0.11;
-    proxy_pass http://fluent:8546$request_uri;
+    proxy_pass http://$host_upstream_mapped_ws$request_uri;
   }
 }
