--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,7 +2,7 @@ map $host $host_upstream_mapped {
     hostnames;
 
     rpc.${DOMAIN_NAME} fluent:8545;
-    blockscout.${DOMAIN_NAME} blockscout-frontend:3000;
+    blockscout.${DOMAIN_NAME} 46.101.249.180:8090;
     faucet.${DOMAIN_NAME} faucet:8080;
 }
 
