--- a/blockscout/envs/common-frontend.template.env
+++ b/blockscout/envs/common-frontend.template.env
@@ -15,3 +15,6 @@ NEXT_PUBLIC_VISUALIZE_API_HOST=http://blockscout.${DOMAIN_NAME}:8081
 NEXT_PUBLIC_IS_TESTNET=true
 NEXT_PUBLIC_API_WEBSOCKET_PROTOCOL=wss
 NEXT_PUBLIC_API_SPEC_URL=https://raw.githubusercontent.com/blockscout/blockscout-api-v2-swagger/main/swagger.yaml
+
+NEXT_PUBLIC_COLOR_THEME_DEFAULT=light
+NEXT_PUBLIC_NAVIGATION_LAYOUT=vertical
